--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <i class='bx  bx-menu' id="menu-icon"></i>
 
     <nav class="navbar">
-      <a href="home" class="active">Home</a>
-      <a href="about">About</a>
-      <a href="skills">Skills</a>
-      <a href="project">Project</a>
-      <a href="contact">Contact</a>
+      <a href="#home" class="active">Home</a>
+      <a href="#about">About</a>
+      <a href="#skills">Skills</a>
+      <a href="#project">Project</a>
+      <a href="#contact">Contact</a>
     </nav>
   </header>
   <section class="home" id="home">
