--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <span></span>
       </h3>
       <p>
-        We are an enthusiastic and motivated team of fresh Java Full Stack Developers, passionate about mastering
+       I have done a certificatio course of Java Full Stack Developlment in Jspiders banglore.  We are an enthusiastic and motivated team of fresh Java Full Stack Developers, passionate about mastering
         the art of building dynamic and scalable web applications. With a solid foundation in Java and expertise
         in both front-end and back-end development, we are excited to contribute to meaningful projects and grow
         as professionals in the tech industry.
@@ -174,6 +174,16 @@
 
   <section class="contact" id="contact">
     <h2 class="heading">Contact <span>Me</span></h2>
+
+     <div class="contact-container">
+    <!-- Contact Info -->
+    <div class="contact-info">
+     <h2>Contact <span class="info-accent">Info</span></h2>
+
+      <p><h3><i class='bx bxs-phone'></i> +91 72878 92401</h3></p>
+      <p><h3><i class='bx bxs-envelope'></i> naveenkumar.pr28@gmail.com</h3></p>
+    </div>
+
 
   <form id="contactForm">
   <input type="text" name="name" placeholder="Full Name" required>
