--- a/index.html
+++ b/index.html
@@ -153,17 +153,17 @@
               <h5>BackEnd Api development</h5>
               <p>We can create a movie ticket booking system API using Java and Spring framework.<br>And we use JWT
                 Authentication for login.</p>
-              <a href="https://github.com/naveenpr-728/movie-ticket-booking-system-api"><i class='bx bx-link-external'
+              <a href="https://github.com/naveenpr-728/movie-ticket-booking-system-api" target="_blank"><i class='bx bx-link-external'
                   style="color:aliceblue"></i></a>
             </div>
           </div>
           <div class="row">
-            <img src="./Screenshot 2025-06-26 193844.png" />
+            <img src="./Screenshot 2025-06-26 193844.png"/>
             <div class="layer">
               <h5>To-Do_list</h5>
               <p>I created a to-do list project with basic HTML, CSS and JavaScript.<br>It helps organize daily tasks
                 and track completion status.</p>
-              <a href="https://github.com/naveenpr-728/To-Do-List"><i class='bx bx-link-external'
+              <a href="https://github.com/naveenpr-728/To-Do-List" target="_blank"><i class='bx bx-link-external'
                   style="color:aliceblue"></i></a>
             </div>
           </div>
@@ -172,17 +172,19 @@
     </div>
   </section>
 
+  <section class="contact-info-section">
+  <h2>Contact <span class="info-highlight">Info</span></h2>
+  <p><i class='bx bxs-phone'></i> +91 72878 92401</p>
+  <p><i class='bx bxs-envelope'></i> naveenkumar.pr28@gmail.com</p>
+</section>
+
+
   <section class="contact" id="contact">
     <h2 class="heading">Contact <span>Me</span></h2>
 
      <div class="contact-container">
     <!-- Contact Info -->
-    <div class="contact-info">
-     <h2>Contact <span class="info-accent">Info</span></h2>
-
-      <p><h3><i class='bx bxs-phone'></i> +91 72878 92401</h3></p>
-      <p><h3><i class='bx bxs-envelope'></i> naveenkumar.pr28@gmail.com</h3></p>
-    </div>
+  
 
 
   <form id="contactForm">
