--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <span></span>
       </h3>
       <p>
-       I have done a certificatio course of Java Full Stack Developlment in Jspiders banglore.  We are an enthusiastic and motivated team of fresh Java Full Stack Developers, passionate about mastering
+       I have done a certification course of Java Full Stack Developlment in Jspiders banglore.  We are an enthusiastic and motivated team of fresh Java Full Stack Developers, passionate about mastering
         the art of building dynamic and scalable web applications. With a solid foundation in Java and expertise
         in both front-end and back-end development, we are excited to contribute to meaningful projects and grow
         as professionals in the tech industry.
